--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 baseURL = "https://www.solarnimise.cz"
 languageCode = "en-us"
+title = "Solární mise"
 theme = "raditian-free-hugo-theme"
 
 # Plugins
