--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -31,7 +31,7 @@ showcase:
       URL: "/"
 
     - icon: "facebook"
-      URL: "/"
+      URL: "https://www.facebook.com/solarnimise"
 
     - icon: "youtube"
       URL: "/"
