--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -349,6 +349,7 @@ contact:
     action: "/"
     full_name: "Jméno a příjmení"
     email: "Emailová adresa"
+    phone: "Telefon"
     message: "Vaše zpráva"
   phone:
     title: ""
